--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>io.kida</groupId>
     <artifactId>Ktor-Middleware</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.2.0</version>
     <packaging>jar</packaging>
 
     <name>Ktor-Middleware</name>
